# pomelo

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
formats/: Cargo.toml
formats/src/: lib.rs
formats/src/exheader/: mod.rs
formats/src/ncch/: mod.rs
guest/: Cargo.toml
guest/src/: guest_abstraction.rs  lib.rs
guest_dynarmic/: Cargo.toml
guest_dynarmic/src/: lib.rs
hle/: Cargo.toml
hle/src/: arbiter.rs  codeset.rs  event.rs  lib.rs  mutex.rs  port.rs  session.rs  svc.rs  thread.rs  timer.rs
hle/src/service/: helper.rs  mod.rs  srv.rs
kernel/: Cargo.toml
kernel/src/: ipc.rs  lib.rs  object_manager.rs
kernel/src/memory/: kmm.rs  mod.rs  page_slice.rs  phys.rs  virt.rs
kernel/src/object/: mod.rs
